unpackaged/main/default/objects/Marketing_Event__c/Marketing_Event__c.object-meta.xml
<CustomObject>
    <label>Marketing Event</label>
    <nameField>
        <label>Marketing Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>