unpackaged/main/default/objects/Marketing_Event__c/fields/Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-ordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>