unpackaged/main/default/objects/Marketing_Event__c/recordTypes/Firm_Event.recordType-meta.xml
<RecordType>
    <fullName>Firm_Event</fullName>
    <active>true</active>
    <description>Marketing events hosted by your firm.</description>
    <label>Firm Event</label>
</RecordType>