unpackaged/main/default/objects/Marketing_Event__c/recordTypes/Third_Party_Event.recordType-meta.xml
<RecordType>
    <fullName>Third_Party_Event</fullName>
    <active>true</active>
    <description>Marketing events attended outside your firm.</description>
    <label>Third Party Event</label>
</RecordType>