unpackaged/main/default/objects/Marketing_Event__c/listViews/My_Events.listView-meta.xml
<ListView>
    <fullName>My_Events</fullName>
    <columns>NAME</columns>
    <columns>Event_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Location__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>My Events</label>
</ListView>